# discordinator-lite

./: .gitignore  README.md  dclite.sh  pyproject.toml
src/: chatterbot_test.py  cli.py  dev.ipynb  repl.py
src/dclite/: chatbot.py  data.py  dataset.py  model.py
