[project]
name = "dclite"
version = "0.1.0"
description = ""
authors = [
    {name = "Hewitt",email = "wangh3@bxscience.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "google-genai (>=1.7.0,<2.0.0)",
    "chatterbot (>=1.2.3,<2.0.0)",
    "discord-py-self (>=2.0.1,<3.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)"
]


[tool.poetry]
packages = [{include = "dclite", from = "src"}]


[tool.poetry.group.dev.dependencies]
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
